Closed
Bug 509156
Opened 17 years ago
Closed 17 years ago
"ASSERTION: Going to leak style data" with -moz-right, table
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.2b1
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
137 bytes,
text/html
|
Details | |
|
1.83 KB,
patch
|
dbaron
:
review+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: Going to leak style data: '!*reinterpret_cast<void**>(dataSlot)', file layout/style/nsStyleContext.cpp, line 307
This assertion was added in bug 508919.
| Reporter | ||
Comment 1•17 years ago
|
||
FWIW, I don't see any trace-refcnt leaks or framearena assertions. Is there really a leak here?
| Assignee | ||
Comment 2•17 years ago
|
||
Yeah, this assert was slightly bogus. We're not leaking because we don't own the struct whose pointer is being clobbered!
Comment on attachment 393324 [details] [diff] [review]
Fix. GetUniqueStyleData will SetStyle() when we already have a struct
r=dbaron
Attachment #393324 -
Flags: review?(dbaron) → review+
| Assignee | ||
Comment 4•17 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2b1
You need to log in
before you can comment on or make changes to this bug.
Description
•