Bug 509156.  Don't assert on GetUniqueStyleData calls if we're using our parent's struct before the call.  r=dbaron