layout/style/nsStyleContext.cpp
@@ -303,7 +303,8 @@ nsStyleContext::SetStyle(nsStyleStructID aSID, void* aStruct)
     }
   }
   char* dataSlot = resetOrInherit + info.mInheritResetOffset;
-  NS_ASSERTION(!*reinterpret_cast<void**>(dataSlot),
+  NS_ASSERTION(!*reinterpret_cast<void**>(dataSlot) ||
+               (mBits & nsCachedStyleData::GetBitForSID(aSID)),
                "Going to leak style data");
   *reinterpret_cast<void**>(dataSlot) = aStruct;
 }
